samples/_failures_safe/1761206884_b0fd3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9c83adb.c: In function ‘main’:
./samples/SAFE/__tmp_f9c83adb.c:176:9: error: expected declaration or statement at end of input
  176 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_f9c83adb.c:176:9: error: expected declaration or statement at end of input
